# ocaml-practice

./: .editorconfig  Makefile  README.md  dune-project  practice.opam
lib/: dune  lib.ml  list.ml  monad.ml
test/: dune
