(lang dune 3.16)

(name practice)

(generate_opam_files true)

(source
 (github thehxdev/practice))

(authors "thehxdev")

(license MIT)


(package
 (name practice)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
